--- a/src/App.scss
+++ b/src/App.scss
@@ -189,3 +189,14 @@
     }
   }
 }
+
+
+.app__order-content{
+  width: 1280px;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+}
