--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center ;
 
-    padding: 1rem 2rem;
+    padding: 0.2rem 2rem;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
 
@@ -29,6 +29,18 @@
         }
     
     }
+    // edit btn
+    .button-m{
+        display: none;
+    }
+
+    @media screen and (max-width: 1200px){
+        .button{
+            display: none;
+        }
+        
+    }
+    
 }
 
 .app__navbar-links{
@@ -38,6 +50,7 @@
     align-items: center;
 
     list-style: none;
+
 
     li{
         margin: 0 1rem;
@@ -49,6 +62,7 @@
         color: var(--white);
         text-decoration: none;
         flex-direction: column;
+        font-size: 12px;
         
         text-transform: capitalize;
         font-weight: 600;
