--- a/src/container/Home/Testimonials/Testimonials.scss
+++ b/src/container/Home/Testimonials/Testimonials.scss
@@ -2,12 +2,12 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
-    display: flex;
+    // display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    flex-direction: row;
-    padding-top: 50px;
+    // flex-direction: row;
+    // padding-top: 50px;
     padding-bottom: 50px;
 
     @media screen and(max-width: 1180px ){
@@ -22,15 +22,15 @@
      }
 
      .head-text-test{
-      padding: 100px;
+      // padding: 100px;
 
       @media screen and(max-width: 1180px ){
-        padding-top: 100px;
+        // padding-top: 50px;
         padding-bottom: 20px;
        }
-     @media screen and(max-width: 850px ){
+    //  @media screen and(max-width: 850px ){
         
-       }
+    //    }
      }
 }
 
@@ -40,12 +40,12 @@
   padding-bottom: 50px;
 
   @media screen and(min-width: 2000px ){
-    padding-top: 100px;
+    padding-top: 50px;
     
     }
 
   @media screen and(max-width: 850px ){
-    padding-top: 50px;
+    padding-top: 30px;
     }
 
   @media screen and(max-width: 650px ){
@@ -57,8 +57,8 @@
     background-position: center;
     background-size: cover;
     width: 320px;
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
-    background: rgb(202, 255, 202);
+    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
+    background: rgb(220, 253, 220);
 
     
     
