--- a/src/App.scss
+++ b/src/App.scss
@@ -27,14 +27,14 @@
 
 
 .title-text{
-  color: #28a745;
+  color: #000000;
   font-size: 40px;
   margin-bottom: 20px;
   text-transform: capitalize;
   justify-content: center;
   text-align: center;
   font-family: var(--font-heading);
-  padding-top: 140px;
+  padding-top: 70px;
 
   @media screen and(min-width: 2000px ){
     padding-top: 80px;
@@ -52,9 +52,9 @@
   }
 
   .title-text-sub{
-      color: black;
+      color: green;
       font-size: 16px;
-      margin-bottom: 25px;
+      padding-bottom: 50px;
       text-transform: capitalize;
       letter-spacing: 2.5px;
       font-family: var(--font-subheading);
@@ -81,8 +81,8 @@
 
   button{
     display: block;
-    background-color: #28a745;
-    border: 2px solid #28a745;
+    background-color: green;
+    border: 2px solid green;
     text-decoration: none;
     padding: 14px 28px;
     font-size: 16px;
@@ -97,8 +97,8 @@
     &:hover{
         transform: scale(1.1);
         background-color: transparent;
-        border: 2px solid #28a745;
-        color: #28a745;
+        border: 2px solid green;
+        color: green;
         transition: .4s;
         cursor: pointer;
     }
@@ -108,7 +108,7 @@
         text-decoration: none;
 
         &:hover{
-          color: #28a745;
+          color: green;
       }
       }
 
@@ -116,15 +116,16 @@
 
     @media screen and(max-width: 1180px ){
        width: 100%;
-       height: 100px;
+       height: 50px;
        font-weight: bold;
-       font-size: 25px;
+       font-size: 18px;
       }
     @media screen and(max-width: 850px ){
        width: 100%;
-       height: 90px;
+       height: 50px;
        font-weight: bold;
-       font-size: 25px;
+       font-size: 16px;
+      
       }
     
 }
@@ -199,4 +200,18 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
+}
+
+
+.href-mobile{
+    
+  @media screen and(min-width: 600px ){
+      display: none;
+  }
+}
+.href-desktop{
+  
+  @media screen and(max-width: 600px ){
+      display: none;
+  }
 }
