--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,4 +1,27 @@
 .app__about{
     width: 100%;
     min-height: 100vh;
+    background-image: url(../../assets/bg_main.png);
+
+    .app__about-bgH{
+        width: 100%;
+        height: 50vh;
+        background:
+        linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.5)100%),
+        url('../../assets/mangala_b.jpg');  
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding-top: 10%;
+      }
+
+
 }
+
+.app__about-content{
+  padding-top: 70px;
+
+
+  
+}
+
