--- a/src/container/Home/Orders/Orders.scss
+++ b/src/container/Home/Orders/Orders.scss
@@ -1,21 +1,30 @@
 .app__orders-main{
     width: 100%;
+    padding-bottom: 60px;
 }
 
 .app__orders{
     width: 100%;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 50px;
+
+
+    .orders-img-cont{
+        border-radius: 15px;
+        overflow: hidden;
+    }
+    
+    
 
     @media screen and(max-width: 1180px ){
             width: 100%;
             height: auto;
-            padding: 70px 0;
+            // padding: 40px 0;
     }
     @media screen and(min-width: 1180px ){
-            padding: 20px 0;
+            // padding: 30px 0;
     }
 
     img{
@@ -23,6 +32,15 @@
         width: 452px;
         max-width: 100%;
         border-radius: 15px;
+        transform: scale(1);
+
+        
+
+        &:hover{
+            transform: scale(1.8);
+            transition: 0.5s ease-in-out; 
+        }
+        
 
         @media screen and(max-width: 650px ){
             margin-bottom: 25px;
@@ -44,7 +62,7 @@
         }
 
         h1{
-            color: #28a745;
+            color: #020202;
             font-size: 34px;
             margin-bottom: 20px;
             text-transform: capitalize;
@@ -65,11 +83,11 @@
         p{
             color: black;
             font-size: 16px;
-            line-height: 25px;
+            line-height: 28px;
             letter-spacing: 2px;
             margin-bottom: 3rem;
             font-family: var( --font-subheading);
-            font-weight: 600;
+            font-weight: 400;
 
             @media screen and(max-width: 850px ){
                 font-size: 20px;
@@ -77,7 +95,11 @@
                 letter-spacing: 1px;
               }
         }
+
+        
     }
+
+
 
     
 
@@ -93,4 +115,8 @@
         flex-direction: column-reverse;
     }
     }
+}
+
+.reverse{
+    flex-direction: row-reverse;
 }
