--- a/src/container/Referrals/Referral.scss
+++ b/src/container/Referrals/Referral.scss
@@ -39,7 +39,7 @@
 
         h3{
             color: black;
-            padding-top: 2rem;
+            padding-top: 1rem;
             padding-bottom: 1rem;
             text-align: center;
             font-family: var(--font-heading);
@@ -91,6 +91,7 @@
                     img{
                         width: 100%;
                         height: 250px;
+                        padding: 50px;
                         border-radius: 10px 10px 0 0;
 
                         @media screen and(max-width: 1180px) {
@@ -102,13 +103,16 @@
                 }
 
                 .card-p{
-                    color: gray;
+                    color: rgb(53, 53, 53);
                     font-size: 16px;
                     font-weight: 400;
-                    font-family: var(--font-secondary);
-                    padding: 0 2rem 1rem;
+                    font-family: var(--font-heading);
+                    padding: 0 2rem 2.5rem;
                     text-align: center;
+                    letter-spacing: 1px;
+                    line-height: 23px;
 
+                    
                     @media screen and(max-width: 1180px) {
                         padding-bottom: 4rem;
                         
