--- a/src/container/Home/Orders/Orders.scss
+++ b/src/container/Home/Orders/Orders.scss
@@ -21,7 +21,7 @@
     @media screen and(max-width: 1180px ){
             width: 100%;
             height: auto;
-            // padding: 40px 0;
+             
     }
     @media screen and(min-width: 1180px ){
             // padding: 30px 0;
@@ -41,14 +41,12 @@
             transition: 0.5s ease-in-out; 
         }
         
-
-        @media screen and(max-width: 650px ){
-            margin-bottom: 25px;
-
-        }
         @media screen and(max-width: 850px ){
             width: max-content;
+        }
 
+          @media screen and(max-width: 650px ){
+            margin-bottom: 25px;
         }
     }
 
@@ -91,7 +89,7 @@
 
             @media screen and(max-width: 850px ){
                 font-size: 20px;
-                line-height: 25px;
+                line-height: 30px;
                 letter-spacing: 1px;
               }
         }
@@ -106,13 +104,13 @@
 
     @media screen and(max-width: 850px ){
         .reverse{
-        flex-direction: column-reverse;
+        flex-direction: row;
     }
     }
     
     @media screen and(max-width: 650px ){
         .reverse{
-        flex-direction: column-reverse;
+        flex-direction: row;
     }
     }
 }
