--- a/src/container/Referrals/Referral.scss
+++ b/src/container/Referrals/Referral.scss
@@ -1,12 +1,14 @@
 .app__referral{
     width: 100%;
-    // min-height: 100vh;
-    
-
-    
 
     .ref-section{
         padding-top: 50px;
+        
+        .app__orders{
+            padding-bottom: 100px;
+            padding-top: 100px;
+        }
+
     }
 
     .app__ref-bgH{
@@ -19,22 +21,34 @@
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 10%;
+
+        @media screen and(max-width: 1180px) {
+            height: 30vh;          
+          }
       }
 
 
     .services{
         width: 100%;
         padding-top: 20px;
-        background: linear-gradient(rgba(0, 128, 0, 0), rgba(27, 160, 0, 0.080));
+        background: linear-gradient((green), (black)100%);
         
 
         h1{
             text-align: center;
-            color: rgb(0, 0, 0);
+            color: white;
             padding-bottom: 1rem;
-            padding-top: 2rem;
+            padding-top: 5rem;
             font-family: var( --font-heading);
-            font-size: 35px;
+            font-size: 3vw;
+            letter-spacing: 3px;
+            
+
+
+            @media screen and(max-width: 1180px) {
+                font-size: 7vw;
+                
+            }
         }
 
         h3{
@@ -66,14 +80,15 @@
             }
 
             .card1{
-                background: white filter blur(5px);
+                background: rgb(236, 255, 238);
                 box-shadow: 0 5px 35px rgba(0, 104, 40, 0.10);
                 width: 100%;
                 margin: 20px;
                 border-radius: 10px 10px 10px 10px;
 
                 @media screen and(max-width: 1180px) {
-                    margin: 5px;
+                    margin: 50px;
+                    padding: 20px;
                     
                     
                 }
@@ -95,10 +110,25 @@
                         border-radius: 10px 10px 0 0;
 
                         @media screen and(max-width: 1180px) {
-                            height: 480px;
+                            height: 490px;
+                            padding: 100px;
                             
                         }
                                                                       
+                    }
+                }
+
+                .card-h{
+                    color: black;
+                    font-size: 2vw;
+                    font-family: var(--font-heading);
+                    text-align: center;
+                    padding-bottom: 25px;
+                    font-weight: 400;
+
+                    @media screen and(max-width: 1180px) {
+                        font-size: 6vw;
+                        
                     }
                 }
 
@@ -115,6 +145,9 @@
                     
                     @media screen and(max-width: 1180px) {
                         padding-bottom: 4rem;
+                        font-size: 19px;
+                        line-height: 35px;
+                        padding-top: 20px;
                         
                     }
                 }
@@ -122,6 +155,7 @@
         }
         
     }
+
 }
 
 
@@ -130,6 +164,9 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    padding: 50px 0;
+    padding-top: 20px;
+    padding-bottom: 100px;
 }
+
+
 
