--- a/src/App.scss
+++ b/src/App.scss
@@ -115,14 +115,14 @@
 
     @media screen and(max-width: 1180px ){
        width: 100%;
-       height: 80px;
-       font-weight: bold;
+       height: 60px;
+       font-weight: 500;
        font-size: 18px;
       }
-    @media screen and(max-width: 850px ){
+    @media screen and(max-width: 650px ){
        width: 100%;
-       height: 80px;
-       font-weight: bold;
+       height: 50px;
+       font-weight: 500;
        font-size: 16px;
       
       }
@@ -210,3 +210,5 @@
       display: none;
   }
 }
+
+
