--- a/src/container/Home/Delivery/Delivery.scss
+++ b/src/container/Home/Delivery/Delivery.scss
@@ -34,6 +34,11 @@
             
         }
     }
+    .app__delivery-content{
+        width: 100%;
+        padding-right: 20px;
+        padding-right: 20px;
+    }
 
     
 }
