--- a/src/container/Home/Orders/Orders.scss
+++ b/src/container/Home/Orders/Orders.scss
@@ -23,8 +23,9 @@
             height: auto;
              
     }
-    @media screen and(min-width: 1180px ){
-            // padding: 30px 0;
+    @media screen and(max-width: 450px ){
+           padding: 10px;
+           padding-bottom: 70px;
     }
 
     img{
@@ -59,6 +60,7 @@
             min-width: 100%;
         }
 
+
         h1{
             color: #020202;
             font-size: 34px;
@@ -74,6 +76,7 @@
 
             @media screen and(max-width: 650px ){
                 font-size: 32px;
+                padding-top: 20px;
      
              }
         }
@@ -92,6 +95,8 @@
                 line-height: 30px;
                 letter-spacing: 1px;
               }
+
+              
         }
 
         
