Mobile reponsives edit, navbar adjustment

--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -1,5 +1,4 @@
-.main{
-    min-height: 100vh;
+.app__contact-main{
     width: 100%;
    
     
@@ -34,6 +33,10 @@
         padding: 10px 50px;
         
     }
+    @media screen and(max-width: 450px){
+        padding: 20px 20px;
+        
+    }
 
 
     .contact{
@@ -43,10 +46,18 @@
         margin-top: 50px;
         margin-bottom: 50px;
 
+        @media screen and(max-width: 1200px) {
+                
+            padding: 0;
+            margin-bottom: 10px;
+           
+            
+        }
+
         
 
-        h3{
-            color: rgb(0, 0, 0);
+        .contact-form_headtext{
+            color: black;
             font-weight: 500;
             font-size: 2.5vw;
             margin-bottom: 18px;
@@ -58,12 +69,25 @@
                 font-size: 4vw;
                 
             }
+            @media screen and(max-width: 450px){
+                font-size: 8vw;
+                font-weight: 600;
+                line-height: 45px;
+                padding: 50px 0 0 20px;
+                
+                
+            }
 
         }
 
         .formBox{
             position: relative;
             width: 100%;
+
+            @media screen and(max-width: 450px) {
+                padding: 20px;
+                  
+              }
 
             .row50{
                 display: flex;
@@ -85,9 +109,16 @@
                     border-radius: 1px;
                     padding: 10px;
                     background: transparent;
+                    
 
                     &:focus{
                         outline: none;
+                    }
+
+                    &::placeholder{
+                        color: rgba(112, 112, 112, 0.541);
+                        font-size: 13px;
+
                     }
     
                 }
@@ -95,7 +126,7 @@
                 span{
                     color: black;
                     font-size: 16px;
-                    font-weight: 500;
+                    font-weight: 600;
                     font-family: var(--font-subheading);
                     letter-spacing: 1px;
                     padding-bottom: 10px;
@@ -112,6 +143,10 @@
             align-items: center;
             justify-content: flex-start;
 
+            @media screen and(max-width: 450px) {
+                padding-bottom: 1.5rem; 
+            }
+
             ul{
                 @media screen and(max-width: 1200px) {
                 
@@ -121,15 +156,19 @@
                     flex-direction: row;
                     
                 }
+
+                @media screen and(max-width: 450px) {
+                  justify-content: center;
+                    
+                }
             }
 
             li{
                 list-style: none;
                 padding: 5px;
+                font-size: 16px;
+                font-weight: 400;
 
-                
-                
-               
                 svg{
                     color: white;
 
@@ -149,6 +188,11 @@
                     &:hover{
                         color: greenyellow;
                     }
+
+                    @media screen and(max-width: 450px) {
+                        font-size: 12px;
+                          
+                      }
                 }
                 
             }
@@ -166,13 +210,11 @@
         "form socail";
         gap: 40px;
         margin-top: 20px;
-        
-
-
+       
         .form{
             grid-area: form;
 
-            .submit-btn{
+               .submit-btn{
                 padding-top: 30px;
             }
         }
@@ -187,28 +229,23 @@
                 &:first-child{
                     padding-bottom: 15px;
                 }
+                &:last-child{
+                    padding-bottom: 2rem;
+                }
             }
 
-            h3{
+            .contact-side-bars{
                 color: black;
                 font-size: 32px;
                 font-weight: 400;
                 font-family: var(--font-subheading);
                 letter-spacing: 2px;
                 padding-bottom: 15px;
-            }
-            
-            p{
-                color: black;
-                font-family: var(--font-subheading);
-                font-size: 16px;
-                font-weight: 400;
-                letter-spacing: 3px;
-                line-height: 1.5rem;
-                padding-bottom: 15px;
 
-                &:hover{
-                    color: green;
+                @media screen and(max-width: 450px) {
+                    padding-top: 2.5rem;
+                    font-weight: 600;
+                    
                 }
             }
 
@@ -224,7 +261,10 @@
                 &:hover{
                     color: green;
                 }
+
             }
+
+           
 
             @media screen and(max-width: 1200px) {
                 
@@ -234,17 +274,22 @@
         }
         .socail{
             grid-area: socail;
-            background: linear-gradient(green, black);
-            
+            background: linear-gradient(green, black);      
             
 
-            h3{
+            .social_headtext{
                 color: white;
                 font-size: 32px;
                 font-weight: 400;
                 font-family: var(--font-subheading);
-                letter-spacing: 3px;
+                letter-spacing: 2px;
                 padding-bottom: 15px;
+
+                @media screen and(max-width: 450px) {
+                    padding-top: 2rem;
+                    font-weight: 600;                    
+                    
+                }
             }
 
             @media screen and(max-width: 1200px) {
