--- a/src/container/Referrals/Referral.scss
+++ b/src/container/Referrals/Referral.scss
@@ -3,6 +3,11 @@
 
     .ref-section{
         padding-top: 50px;
+
+        @media screen and (max-width: 450px){
+            padding-top: 0;
+            
+        }
         
         .app__orders{
             padding-bottom: 100px;
@@ -28,13 +33,13 @@
       }
 
 
-    .services{
+    .howItWoks-section{
         width: 100%;
         padding-top: 20px;
         background: linear-gradient((green), (black)100%);
         
 
-        h1{
+        .howItWork-headtext{
             text-align: center;
             color: white;
             padding-bottom: 1rem;
@@ -49,6 +54,10 @@
                 font-size: 7vw;
                 
             }
+            @media screen and(max-width: 450px) {
+                font-size: 8vw;
+                
+            }
         }
 
         h3{
@@ -60,7 +69,7 @@
         }
         
 
-        .mycard{
+        .cards-content{
             
             display: flex;
             flex-direction: row;
@@ -79,6 +88,12 @@
                 
             }
 
+            @media screen and(max-width: 450px) {
+                margin: 10px;
+              
+                
+            }
+
             .card1{
                 background: rgb(236, 255, 238);
                 box-shadow: 0 5px 35px rgba(0, 104, 40, 0.10);
@@ -89,7 +104,12 @@
                 @media screen and(max-width: 1180px) {
                     margin: 50px;
                     padding: 20px;
-                    
+                }
+
+                @media screen and(max-width: 450px) {
+                    margin-bottom: 20px;
+                    padding: 10px;
+                  
                     
                 }
 
@@ -112,6 +132,12 @@
                         @media screen and(max-width: 1180px) {
                             height: 490px;
                             padding: 100px;
+                            
+                        }
+                        @media screen and(max-width: 450px) {
+                            height: 190px;
+                            padding: 10px;
+                            padding-top: 20px;
                             
                         }
                                                                       
@@ -148,6 +174,13 @@
                         font-size: 19px;
                         line-height: 35px;
                         padding-top: 20px;
+                        
+                    }
+
+                    @media screen and(max-width: 450px) {
+                        padding-bottom: 1rem;
+                        padding-top: 0.5rem;
+                        line-height: 25px;
                         
                     }
                 }
