--- a/src/components/Heading/HeadingSection.scss
+++ b/src/components/Heading/HeadingSection.scss
@@ -1,6 +1,4 @@
 .app__header-section{
-    // flex: 1;
-    // height: 50vh;
     width: 100%;
     align-items: center;
 
@@ -10,44 +8,24 @@
         top: 50%;
         left: 50%;  
         transform: translateY(50%);
+
+        @media screen and(max-width: 450px) {
+            padding-top: 20px;
+            
+        }
     }
     
-    .here-1{
-        font-family: var(--font-base);
-        font-size: 60px;
-        font-weight: 300;
-        color: var(--primary);
-        
-
-        @media screen and(min-width: 2000px ){
-            font-size: 100px;
-            // line-height: 4rem;
-            }
-
-        @media screen and(max-width: 850px ){
-            font-size: 70px;
-            }
-
-        @media screen and(max-width: 650px ){
-            font-size: 30px;
-            }
-        }
-
-
-
-    .here-2{
+    .hero-2{
         font-size: 43px;
         font-weight: bold;
         font-family: var(--font-heading);
         color: white;
         text-transform: capitalize;
-        // line-height: 90px;
         letter-spacing: 7px;
     
 
         @media screen and(max-width: 1180px) {
         font-size: 60px;
-        // line-height: 4rem;
         letter-spacing: 1px;
         
     }
@@ -59,7 +37,7 @@
 
     }
 
-    .here-3{
+    .hero-3{
         font-size: 20px;
         font-weight: 400;
         font-family: var(--font-primary);
