--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center ;
 
-    padding: 0.2rem 2rem;
+    padding: 0.2rem 2rem 0.8rem;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
 
@@ -181,8 +181,6 @@
 
 }
 
-.active{
-    color: #fff;
-} 
+
 
 
