--- a/src/container/Referrals/Referral.scss
+++ b/src/container/Referrals/Referral.scss
@@ -12,6 +12,10 @@
         .app__orders{
             padding-bottom: 100px;
             padding-top: 100px;
+
+            img{
+                transform: none;
+              }
         }
 
     }
