--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@
 
 
 .title-text{
-  color: #000000;
+  color: black;
   font-size: 40px;
   margin-bottom: 20px;
   text-transform: capitalize;
@@ -59,7 +59,7 @@
       letter-spacing: 2.5px;
       font-family: var(--font-subheading);
       text-align: center;
-      font-weight: 400;
+      font-weight: 600;
       justify-content: center;
 
       @media screen and(max-width: 850px ){
@@ -73,9 +73,6 @@
           }
       
   }
-
-
-  /* edit css media query correctly */
 
 
   button{
@@ -97,7 +94,7 @@
         transform: scale(1.1);
         background-color: transparent;
         border: 2px solid green;
-        color: green;
+        color: green !important;
         transition: .4s;
         cursor: pointer;
     }
@@ -136,10 +133,7 @@
   align-items: center;
   flex-direction: row;
 
-  @media screen and(max-width: 1180px) {
-    // flex-direction: column;
-    
-  }
+ 
   @media screen and(max-width: 450px) {
     display: none;
     
