--- a/src/container/Home/Orders/Orders.scss
+++ b/src/container/Home/Orders/Orders.scss
@@ -61,8 +61,8 @@
         }
 
 
-        h1{
-            color: #020202;
+        .order-headtext{
+            color: black;
             font-size: 34px;
             margin-bottom: 20px;
             text-transform: capitalize;
@@ -81,14 +81,15 @@
              }
         }
 
-        p{
+        .order-head-p{
             color: black;
             font-size: 16px;
             line-height: 28px;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
             margin-bottom: 3rem;
             font-family: var( --font-subheading);
             font-weight: 400;
+            padding-top: 10px;
 
             @media screen and(max-width: 850px ){
                 font-size: 20px;
