--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -6,12 +6,13 @@
         width: 100%;
         height: 50vh;
         background:
-        linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.5)100%),
+        linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.74)100%),
         url('../../assets/mangala_b.jpg');  
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 10%;
+        background-attachment: fixed;
 
         @media screen and(max-width: 1180px) {
           height: 30vh;          
@@ -20,6 +21,7 @@
 
       .app__about-content{
         padding-top: 70px;
+        overflow: hidden;
 
         .app__orders{
 
@@ -41,5 +43,6 @@
 
 .content-center{
   background: linear-gradient((green)0%, (black)100%);
+  background-attachment: fixed;
 }
 
