--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -13,6 +13,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 10%;
+        background-attachment: fixed;
 
         @media screen and(max-width: 1180px){
             height: 30vh;
@@ -126,7 +127,7 @@
                 span{
                     color: black;
                     font-size: 16px;
-                    font-weight: 600;
+                    font-weight: 400;
                     font-family: var(--font-subheading);
                     letter-spacing: 1px;
                     padding-bottom: 10px;
