--- a/src/container/Home/Delivery/Delivery.scss
+++ b/src/container/Home/Delivery/Delivery.scss
@@ -3,6 +3,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: repeat;
+    background-attachment: fixed;
   }
 
 .app__delivery{
