--- a/src/container/Referrals/Referral.scss
+++ b/src/container/Referrals/Referral.scss
@@ -12,6 +12,7 @@
         .app__orders{
             padding-bottom: 100px;
             padding-top: 100px;
+            overflow: hidden;
 
             img{
                 transform: none;
@@ -24,12 +25,13 @@
         width: 100%;
         height: 50vh;
         background:
-        linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.5)100%),
+        linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.74)100%),
         url('../../assets/referral.jpg');  
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
         padding-top: 10%;
+        background-attachment: fixed;
 
         @media screen and(max-width: 1180px) {
             height: 30vh;          
@@ -41,6 +43,7 @@
         width: 100%;
         padding-top: 20px;
         background: linear-gradient((green), (black)100%);
+        background-attachment: fixed;
         
 
         .howItWork-headtext{
@@ -120,7 +123,8 @@
                
                 
                 &:hover{
-                    box-shadow: 5px 10px 20px 1px rgba(39, 138, 0, 0.199);
+                    box-shadow: 5px 10px 20px 1px rgba(44, 153, 0, 0.733);
+                  
                     
                 }
 
