--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,13 +4,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center ;
+    box-shadow: 1px 1px 45px  rgba(0, 0, 0, 0.452);
 
     padding: 0.2rem 2rem 0.8rem;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
+    transition: all 0.4s ease-in-out;
 
-    
-    background: rgba(0, 0, 0, 0.39); 
+
+    background: rgba(0, 0, 0, 0.301); 
+
     position: fixed;
     z-index: 2;
 
@@ -18,6 +21,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        transition: 0.4s ease-in-out;
      
       
         img{
@@ -29,6 +33,7 @@
         }
     
     }
+
 }
 
 .app__navbar-links{
@@ -47,7 +52,7 @@
     }
 
     a{
-        color: var(--white);
+        color: rgb(248, 248, 248);
         text-decoration: none;
         flex-direction: column;
         font-size: 12px;
