--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 
 .App {
   text-align: center;
+  min-width: 100%;
 }
 
 .app__container {
@@ -129,20 +130,25 @@
 
 
 .app__social {
-  display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   align-items: center;
+  display: flex;
   flex-direction: row;
+  width: 100%;
+  
 
- 
-  @media screen and(max-width: 450px) {
-    display: none;
-    
+  svg{
+    color: white;
+    cursor: pointer;
+
+    &:hover{
+      color: green;
+      transform: scale(2);
+    }
   }
 
  
-
-  div {
+ div {
     width: 30px;
     height: 30px;
     border: 1px solid var(--lightGray-color);
@@ -206,4 +212,157 @@
   }
 }
 
+.app__orders{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  padding-bottom: 100px;
 
+
+  .orders-img-cont{
+      border-radius: 15px;
+      overflow: hidden;
+  }
+  
+  
+
+  @media screen and(max-width: 1180px ){
+          height: auto;
+           
+  }
+  @media screen and(max-width: 450px ){
+      //    padding-bottom: 70px;
+  }
+
+  img{
+      height: auto;
+      width: 452px;
+      max-width: 100%;
+      border-radius: 15px;
+      transform: scale(1);
+
+      
+
+      &:hover{
+          transform: scale(1.8);
+          transition: 0.5s ease-in-out; 
+      }
+      
+      @media screen and(max-width: 850px ){
+          width: max-content;
+      }
+
+        @media screen and(max-width: 650px ){
+          margin-bottom: 25px;
+      }
+  }
+
+  .app__orders-text{
+      width: 550px;
+      max-width: 100%;
+      padding: 0 10px;
+
+      @media screen and(max-width: 850px ){
+          min-width: 100%;
+      }
+
+
+      .order-headtext{
+          color: black;
+          font-size: 34px;
+          margin-bottom: 20px;
+          text-transform: capitalize;
+          font-family: var(--font-heading);
+
+       
+          @media screen and(max-width: 850px ){
+            padding-top: 80px;
+            font-size: 44px;
+          }
+
+          @media screen and(max-width: 650px ){
+              font-size: 32px;
+              padding-top: 20px;
+   
+           }
+      }
+
+      .order-head-p{
+          color: black;
+          font-size: 16px;
+          line-height: 28px;
+          letter-spacing: 1px;
+          margin-bottom: 3rem;
+          font-family: var( --font-subheading);
+          font-weight: 600;
+          padding-top: 10px;
+
+          @media screen and(max-width: 850px ){
+              font-size: 20px;
+              line-height: 30px;
+              letter-spacing: 1px;
+            }
+
+            
+      }
+
+      
+  }
+
+
+
+  
+
+
+  @media screen and(max-width: 850px ){
+      .reverse{
+      flex-direction: row;
+  }
+  }
+  
+  @media screen and(max-width: 650px ){
+      .reverse{
+      flex-direction: row;
+  }
+  }
+}
+
+.Nothing{
+  width: 100%;
+  min-height: 100vh;
+  flex: 1;
+  align-content: center;
+
+  .Nothing-here{
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%, -50%);
+    justify-content: center;
+    align-items: center;
+    
+
+     .error-404{
+      color: rgb(100, 100, 100);
+      font-size: 10vw;
+      font-family: var(--font-subheading);
+      font-weight: 600;
+    }
+    .error-text{
+      font-size: 3vw;
+      color: rgb(88, 88, 88);
+      font-family: var(--font-subheading);
+      font-weight: 400;
+      padding-bottom: 4rem;
+    }
+  }
+}
+
+#app__fish-bg{
+  background: url('./assets/fishbg.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
