--- a/src/container/Home/Delivery/Delivery.scss
+++ b/src/container/Home/Delivery/Delivery.scss
@@ -7,7 +7,7 @@
   }
 
 .app__delivery{
-    width: 100%;
+    min-width: 100%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
