--- a/src/container/Referrals/Referral.scss
+++ b/src/container/Referrals/Referral.scss
@@ -1,5 +1,5 @@
 .app__referral{
-    width: 100%;
+    min-width: 100%;
 
     .ref-section{
         padding-top: 50px;
@@ -10,13 +10,26 @@
         }
         
         .app__orders{
-            padding-bottom: 100px;
-            padding-top: 100px;
-            overflow: hidden;
-
             img{
                 transform: none;
               }
+
+              .ref-info{
+                display: flex;
+                flex-direction: row;
+
+                @media screen and (max-width: 1180px) {
+                    flex-direction: column;
+                  }
+              }
+
+                @media screen and (min-width: 1180px){
+                .app__orders-text{
+                padding-left: 100px;
+                }
+            }
+                
+            
         }
 
     }
