--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 0.2rem 2rem;
     background-color:  rgb(0, 0, 0);;
+    height: 40px;
 
     
 
@@ -12,7 +13,12 @@
            
         height: 30px;
         width: auto;
-        opacity: 0.2;
+        opacity: 0.5;
+
+        @media screen and(min-width: 450px) {
+            display: none;
+            
+        }
     }
 
 }
@@ -23,6 +29,11 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+
+    @media screen and(min-width: 450px) {
+        display: none;
+        
+    }
 
     li{
         margin: 0 1rem;
@@ -36,7 +47,7 @@
         font-size: 12px;
         font-weight: 600;
         transition: all 0.3s ease-in-out;
-        font-family: var(--font-secondary);
+        font-family: var(--font-subheading);
         letter-spacing: 2px;
 
         &:hover{
