--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,6 +1,6 @@
 .app__about{
-    width: 100%;
-    background-image: url(../../assets/bg_main.png);
+  width: 100%;
+  background-image: url(../../assets/bg_main.png);
 
     .app__about-bgH{
         width: 100%;
@@ -26,6 +26,15 @@
 
         .app__orders{
           
+          .about-info{
+            display: flex;
+            flex-direction: row;
+
+            @media screen and (max-width: 1180px) {
+              flex-direction: column;
+            }
+            
+          }
 
           img{
             transform: none;
@@ -33,16 +42,18 @@
           
           @media screen and (min-width: 1180px) {
             padding-bottom: 100px;
-            
           }
 
-         
+
+          @media screen and (min-width: 1180px){
+            .app__orders-text{
+              padding: 0 0px 0 100px
+            }
+            
+          }
         }
 
       }
-      
-
-
 }
 
 
