--- a/src/container/Home/Header/Header.scss
+++ b/src/container/Home/Header/Header.scss
@@ -11,7 +11,7 @@
 .app__header-text{
     flex: 1;
     height: 100vh;
-    width: 100%;
+    min-width: 100%;
     align-items: center;
 
     .hero-text{
