--- a/src/container/Home/Home_referrals/HomeReferrals.scss
+++ b/src/container/Home/Home_referrals/HomeReferrals.scss
@@ -11,7 +11,7 @@
 
 .app__homereferrals{
     flex: 1;
-    width: 100%;
+    min-width: 100%;
     height: 100vh;
     align-items: center;
     justify-content: center;
