--- a/src/container/Home/Testimonials/Testimonials.scss
+++ b/src/container/Home/Testimonials/Testimonials.scss
@@ -1,6 +1,6 @@
 .app__testimonials{
     position: relative;
-    width: 100%;
+    min-width: 100%;
     justify-content: center;
     align-items: center;
     overflow: hidden;
