order list padding

--- a/src/App.scss
+++ b/src/App.scss
@@ -233,7 +233,9 @@
            
   }
   @media screen and(max-width: 450px ){
-      //    padding-bottom: 70px;
+    padding-top: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   img{
