--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -131,13 +131,24 @@
             flex-direction: row;
             justify-content: space-evenly;
             align-items: center;
+
+            svg{
+                width: 20px;
+                height: 20px;
+                color: var(--white);
+                margin: 0.5rem 1rem;
+    
+                &:hover{
+                    color: var(--primary);
+                }
+            }
                      
         }
 
 
         svg{
-            width: 35px;
-            height: 35px;
+            width: 30px;
+            height: 30px;
             color: var(--white);
             margin: 0.5rem 1rem;
 
