--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,70 +1,50 @@
-.app__about-main{
-  width: 100%;
+// .app__about-main{
+//   width: 100%;
   
-  overflow: hidden;
-  background-image: url(../../assets/bg_main.png);
+//   overflow: hidden;
+//   background-image: url(../../assets/bg_main.png);
 
-    .app__about-bgH{
-        width: 100%;
-        height: 50vh;
-        background:
-        linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.74)100%),
-        url('../../assets/mangala_b.jpg');  
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        padding-top: 10%;
-        background-attachment: fixed;
+    
 
-        @media screen and(max-width: 1180px) {
-          height: 30vh;          
-        }
-
-        .app__animate-item{
-          padding-bottom: 100px;
-          padding-top: 100px;
-        }
-      }
-
-      .app__about-content{
-        padding-top: 70px;
-        // overflow: hidden;
-        min-width: 100%;
+//       .app__about-content{
+//         padding-top: 70px;
+//         // overflow: hidden;
+//         min-width: 100%;
       
 
-        .app__orders{
+//         .app__orders{
           
-          .about-info{
-            display: flex;
-            flex-direction: row;
+//           .about-info{
+//             display: flex;
+//             flex-direction: row;
 
-            @media screen and (max-width: 1180px) {
-              flex-direction: column;
-            }
+//             @media screen and (max-width: 1180px) {
+//               flex-direction: column;
+//             }
             
             
-          }
-          img{
-            transform: none;
-          }
+//           }
+//           img{
+//             transform: none;
+//           }
           
           
-          @media screen and (min-width: 1180px) {
-            padding-bottom: 100px;
+//           @media screen and (min-width: 1180px) {
+//             padding-bottom: 100px;
 
-            .app__orders-text{
-              padding: 0 0px 0 100px
-            }
-          }
+//             .app__orders-text{
+//               padding: 0 0px 0 100px
+//             }
+//           }
 
 
           
-        }
+//         }
 
         
 
-      }
-}
+//       }
+// }
 
 
 .content-center{
@@ -72,11 +52,50 @@
   background-attachment: fixed;
 }
 
-.app__about-mainCont{
-  @media screen and(max-width: 450px) {
-    padding-left: 10px;
-    padding-right: 10px;
+// // .app__about-mainCont{
+// //   @media screen and(max-width: 450px) {
+// //     padding-left: 10px;
+// //     padding-right: 10px;
     
-  }
-}
+// //   }
+// // }
 
+
+// .app__about-bgH{
+//   width: 100%;
+//   height: 50vh;
+//   background:
+//   linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.74)100%),
+//   url('../../assets/mangala_b.jpg');  
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   padding-top: 10%;
+//   background-attachment: fixed;
+
+//   @media screen and(max-width: 1180px) {
+//     height: 30vh;          
+//   }
+
+//   .app__animate-item{
+//     padding-bottom: 100px;
+//     padding-top: 100px;
+//   }
+// }
+
+.app__about-bgH{
+  width: 100%;
+  height: 50vh;
+  background:
+  linear-gradient(rgba(0,0,0, 0.50)0%, rgba(8, 8, 8, 5)70%),
+  url('../../assets/mangala_b.jpg'); 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 10%;
+  background-attachment: fixed;
+
+  @media screen and(max-width: 1180px) {
+      height: 30vh;          
+    }
+}
