--- a/src/container/Referrals/Referral.scss
+++ b/src/container/Referrals/Referral.scss
@@ -38,8 +38,8 @@
         width: 100%;
         height: 50vh;
         background:
-        linear-gradient(rgba(0,0,0,0)0%, rgba(0, 168, 28, 0.74)100%),
-        url('../../assets/referral.jpg');  
+        linear-gradient(rgba(0,0,0, 0.50)0%, rgba(8, 8, 8, 5)70%),
+        url('../../assets/referralb.jpg');  
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
